@@ -15,6 +15,8 @@ Improvements:
 Bug fixes:
  - apport-cli: Fix crash with non-ASCII characters in prompts.
  - Fix "apport-bug symptomname" to actually work.
+ - launchpad.py: Fix crash on invalid credentials file. Thanks to Marco
+   Rodrigues for the initial patch! (LP: #414055)
 
 1.9.1 (2009-09-22)
 ------------------
